crates/component-frontend/src/components/ds/snapshots/wasm_frontend__components__ds__link_list__tests__snapshot_count.snap
---
source: crates/wasm-frontend/src/components/ds/link_list.rs
expression: "crate::components::ds::pretty_html(&html)"
---
<div>
  <div class="text-[12px] mono uppercase tracking-wider text-ink-500">
    Categories
  </div>
  <ol class="mt-4 border-t-[1.5px] border-lineSoft">
    <li class="border-b border-lineSoft">
      <a href="/c/wasi" class="group flex items-baseline justify-between gap-4 py-3 text-[14px] no-underline">
        <span class="text-ink-900 group-hover:underline decoration-1 underline-offset-4">
          WASI
        </span>
        <span class="mono text-[13px] text-ink-500 tabular-nums">
          412
        </span>
      </a>
    </li>
    <li class="border-b border-lineSoft">
      <a href="/c/http" class="group flex items-baseline justify-between gap-4 py-3 text-[14px] no-underline">
        <span class="text-ink-900 group-hover:underline decoration-1 underline-offset-4">
          HTTP
        </span>
        <span class="mono text-[13px] text-ink-500 tabular-nums">
          188
        </span>
      </a>
    </li>
  </ol>
</div>
